--- a/exampleSite/config/_default/hugo.toml
+++ b/exampleSite/config/_default/hugo.toml
@@ -48,8 +48,8 @@ removePathAccents = false
 summaryLength = 0
 templateMetrics = false
 templateMetricsHints = false
-theme = 'hugo-theme-vapor'
-themesDir = '../..'
+theme = "hugo-theme-vapor"
+themesDir = "../.."
 timeout = '30s'
 timeZone = ''
 title = 'Portfolio'
