+ add customizable font [refactor] static folder

--- a/exampleSite/config/_default/params.toml
+++ b/exampleSite/config/_default/params.toml
@@ -5,6 +5,7 @@ defaultThemeMode = 'light'
 languageSelector = true
 themeModeSwitcher = true
 searchBar = true
+googleFontName = "Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900"
 formspreeFormUrl = 'https://formspree.io/f/xqakprqn'
 fontawesomeKitUrl = 'https://kit.fontawesome.com/3fe49439a1.js'
 
